--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chotu-backend",
+  "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "newsapi": "^2.4.1"
   }
